Symptom: add visual diff tool for git Issue ID: NA Root Cause: NA Solution: NA

--- a/README
+++ b/README
@@ -24,11 +24,15 @@ monkey -p com.dropbox.android -v 500
 
 
 
+
 for Service Management
 
 1. service
 adb shell
 service list
+
+
+
 
 
 for Run Native Code on Android
@@ -37,7 +41,13 @@ for Run Native Code on Android
 you should modify the shell script to fit your real environment.
 such as the value of OS or ANDROIDSDK variables, you should check the script, it is very clear.
 
-2. make_cscope_indices
+
+
+
+
+other tools and tips
+
+1. make_cscope_indices
 usage:
 
 append 'make_cscope_indices' to your environment variable PATH, so you can access it anywhere.
@@ -53,3 +63,5 @@ strip the double quotation marks when you execute the command
 your_host_where_want_to_generate_indices$make_cscope_indices
 your_host_where_want_to_generate_indices$make_cscope_indices f
 
+2. Git, use diff and difftool
+use external visual diff tool(p4merge).
