enable eat memory

--- a/AndroidAppTestToolkit/app/src/main/res/values/strings.xml
+++ b/AndroidAppTestToolkit/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
 
     <string name="contacts_clean">Clean contacts</string>
 
+    <string name="eat_system_memory">Eat system memory</string>
+
 </resources>
